Changelog
=========

This document describes changes between each past release.

TBD
-------------------

- Bug 1170757 - Enabled eslint dot-location + no-empty rules for Hello
- Bug 1182079 - Fix intermittent test failure loading the Loop's ui-showcase on debug builds by extending the page load timeout, and improve the failure naming.
- Bug 1192738 - Drop the old aspect ratio calculation code now that Loop's media layout refactors have been completed.
- Bug 1193311 - Enable eslint rules for Loop: eqeqeq (for content code).
- Bug 1178393 - Countdown to zero warnings in standalone test suite.
- Bug 1194738 - Drop some obsolete pref handling from Loop, and some old room conversation styles.
- No Bug - correct comment to say 'browser', not 'tab'.
- Bug 1190442 - Visual refresh for Loop FTU panel.
- Bug 1184559 - Implement the refreshed design for the conversation toolbar.
- Bug 1189287 - Update the tooltip strings for the mute and unmute video buttons inside the Hello conversation toolbar.
- Bug 1197795 - Update Loop's library versions (eslint 1.2.1, sinon 1.16.1).
- Bug 1184917 - Implement the refreshed design for 'Edit' conversation toolbar button.
- Bug 1126733 - Brief message appears when entering a standalone room that the user is the only person in the room.
- No bug - Remove obsolete jshint files from Loop's standalone as Loop now uses eslint
- Bug 1198841 - Brief message to invite someone to join when joining a room with someone already there
- Bug 1194622 - Provide indication of loading when waiting for the room list
- Bug 1201446 - Don't expose websocket reasons to the view code where we have a specific failure detail available.
- Bug 1198891 - Tab/Window Sharing icon should turn blue when sharing is active.
- Bug 1202402 - Nothing shown on the standalone UI when a peer exits the room
- Bug 1184933 - Part 1. Implement the refreshed design for the failure view.
- Bug 1184933 - Part 2. Add the settings menu onto the failure view.